--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,2 +1,3 @@
-$backgroundColor: rgb(255, 255, 255);
-$boxShadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
+$backgroundColor: whitesmoke;
+$boxShadow: 0px 0px 5px 0px rgba(255, 235, 168, 0.904);
+$listBackgroundColor: white;
