--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,3 +1,3 @@
-$backgroundColor: whitesmoke;
-$boxShadow: 0px 0px 5px 0px rgba(255, 235, 168, 0.904);
+$backgroundColor: rgba(221, 221, 221, 0.1);
+$boxShadow: 0px 0px 5px 0px rgba(156, 255, 217, 0.904);
 $listBackgroundColor: white;
