--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,7 +3,6 @@
 
 .App {
   width: 100vw;
-  height: 100vh;
-  background-color: $backgroundColor;
   @include flexSort;
+  flex-direction: column;
 }
