--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,6 +1,8 @@
+@import "../../styles/color.scss";
+
 .header {
   width: 100%;
   height: 60px;
-  box-shadow: 0px 0px 3px 0px rgba(132, 132, 132, 0.904);
+  box-shadow: $boxBlackShadow;
   background-color: white;
 }
