--- a/src/components/listItem/ListItem.module.scss
+++ b/src/components/listItem/ListItem.module.scss
@@ -3,7 +3,7 @@
 
 .listItem {
   font-size: 13px;
-  box-shadow: $boxShadow;
+  box-shadow: $boxGreenShadow;
   background-color: $listBackgroundColor;
   transition: 0.5s;
 
