--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -1,3 +1,4 @@
 $backgroundColor: rgba(221, 221, 221, 0.1);
-$boxShadow: 0px 0px 5px 0px rgba(156, 255, 217, 0.904);
+$boxGreenShadow: 0px 0px 5px 0px rgba(156, 255, 217, 0.904);
+$boxBlackShadow: 0px 0px 3px 0px rgba(132, 132, 132, 0.904);
 $listBackgroundColor: white;
