--- a/src/components/listItem/ListItem.module.scss
+++ b/src/components/listItem/ListItem.module.scss
@@ -1,11 +1,29 @@
 @import "../../styles/color.scss";
 @import "../../styles/func.scss";
+@import "../../styles/common.scss";
 
 .listItem {
   font-size: 13px;
   box-shadow: $boxGreenShadow;
   background-color: $listBackgroundColor;
   transition: 0.5s;
+  position: relative;
+
+  .img {
+    width: 100%;
+    height: 100%;
+  }
+  .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    @include flexSort;
+  }
 
   &:hover {
     cursor: pointer;
