--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: $backgroundColor;
 
+  @font-face {
+    font-family: "TheJamsil5Bold";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2")
+      format("woff2");
+    font-weight: 700;
+    font-style: normal;
+  }
+
   @keyframes closeMotion {
     0% {
       right: 0px;
