--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -6,7 +6,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
   background-color: rgba(0, 0, 0, 0.4);
   @include flexSort;
 
@@ -15,12 +14,51 @@
     height: 60vh;
     text-align: center;
     background-color: white;
+    position: relative;
 
     .header {
       font-size: 20px;
       font-weight: 700;
       margin-top: 20px;
       margin-bottom: 30px;
+    }
+  }
+
+  .btns {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    button {
+      width: 80%;
+      padding: 10px 0;
+      outline: none;
+      border: none;
+      color: white;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .loginBtn {
+      background-color: rgb(66, 66, 66);
+      margin-bottom: 5px;
+
+      &:hover {
+        background-color: black;
+      }
+    }
+
+    .join {
+      background-color: rgb(74, 74, 215);
+
+      &:hover {
+        background-color: blue;
+      }
     }
   }
 }
