--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -6,6 +6,7 @@
   box-shadow: $boxBlackShadow;
   background-color: white;
   font-size: 14px;
+  font-weight: 700;
   display: flex;
   align-items: center;
   justify-content: center;
