--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/common.scss";
+@import "../../styles/color.scss";
 
 .login {
   width: 100vw;
@@ -54,7 +55,7 @@
     }
 
     .join {
-      background-color: rgb(74, 74, 215);
+      background-color: $shadowBlue;
 
       &:hover {
         background-color: blue;
