--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,3 +14,10 @@ $wide-screen: "(min-width: 1000px)";
     font-size: $size;
   }
 }
+
+@mixin recipeInput {
+  border: 1px solid $borderColor;
+  outline: none;
+  height: 20px;
+  width: 50%;
+}
