회원가입 컴포넌트 UI 및 기능 구현

--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -2,27 +2,10 @@
 @import "../../styles/color.scss";
 
 .login {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  @include flexSort;
+  @include modal;
 
   .container {
-    width: 350px;
-    height: 60vh;
-    text-align: center;
-    background-color: white;
-    position: relative;
-
-    .header {
-      font-size: 20px;
-      font-weight: 700;
-      margin-top: 20px;
-      margin-bottom: 30px;
-    }
+    @include container;
   }
 
   .btns {
