--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,6 +2,31 @@
 
 $wide-screen: "(min-width: 1000px)";
 
+@mixin modal {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  @include flexSort;
+}
+
+@mixin container {
+  width: 350px;
+  height: 60vh;
+  text-align: center;
+  background-color: white;
+  position: relative;
+
+  .header {
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+}
+
 @mixin flexSort {
   display: flex;
   align-items: center;
