--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -11,15 +11,30 @@
   align-items: center;
   justify-content: center;
 
-  .input {
-    width: 200px;
-    height: 25px;
-    border: 1px solid lightgray;
-    outline: none;
-    border-radius: 4px;
+  .search {
+    display: flex;
+    align-items: center;
 
-    &::placeholder {
-      color: lightgray;
+    .input {
+      width: 200px;
+      height: 25px;
+      border: 1px solid lightgray;
+      outline: none;
+      border-radius: 4px;
+
+      &::placeholder {
+        color: lightgray;
+      }
+    }
+
+    .reload {
+      margin-left: 10px;
+      width: 20px;
+      height: 20px;
+      padding: 3px;
+      border: 1px solid $borderColor;
+      border-radius: 4px;
+      cursor: pointer;
     }
   }
 
