add 추가 누락 되는 이슈 수정. recipe, material UI 깨지는 이슈 수정

--- a/src/components/add/recipe/AddRecipeItem.module.scss
+++ b/src/components/add/recipe/AddRecipeItem.module.scss
@@ -42,9 +42,13 @@
       display: flex;
       align-items: center;
       width: 70%;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
+
+      .text {
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
 
       .close {
         position: absolute;
