--- a/src/components/add/material/AddRecipeMaterial.module.scss
+++ b/src/components/add/material/AddRecipeMaterial.module.scss
@@ -45,6 +45,13 @@
       display: flex;
       align-items: center;
 
+      .text {
+        width: 150px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+
       .close {
         font-size: 10px;
         position: absolute;
