--- a/src/components/listView/ListView.module.scss
+++ b/src/components/listView/ListView.module.scss
@@ -48,6 +48,7 @@
       grid-template-columns: repeat(2, 1fr);
 
       .item {
+        width: 100px;
         margin-right: 20px;
         margin-bottom: 10px;
       }
