--- a/src/components/add/imgFile/AddImgFile.module.scss
+++ b/src/components/add/imgFile/AddImgFile.module.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/color.scss";
+@import "../../../styles/common.scss";
 
 .addImgFile {
   display: flex;
@@ -19,6 +20,25 @@
     display: flex;
     align-items: center;
 
+    .loadingContainer {
+      width: 100%;
+      height: 100%;
+      z-index: 100;
+      position: absolute;
+      top: 0;
+      left: 0;
+      @include flexSort;
+
+      .loading {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        border: 2px solid lightgray;
+        border-top: 2px solid gray;
+        animation: loading 1s linear forwards infinite;
+      }
+    }
+
     .camera {
       height: 25px;
       object-fit: contain;
@@ -31,11 +51,32 @@
       }
     }
 
+    .arr {
+      display: flex;
+      margin-left: 30px;
+
+      .img {
+        margin-right: 10px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+      }
+    }
+
     .preView {
       position: absolute;
       right: 20px;
       font-size: 14px;
       cursor: pointer;
+    }
+  }
+
+  @keyframes loading {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
     }
   }
 }
