mobile ui 구현 및 기능 적용

--- a/src/components/add/AddRecipe.module.scss
+++ b/src/components/add/AddRecipe.module.scss
@@ -54,4 +54,12 @@
       }
     }
   }
+
+  @include mobile {
+    .container {
+      width: 100%;
+      max-height: none;
+      height: 100%;
+    }
+  }
 }
