--- a/src/components/imgSlider/ImgSlider.module.scss
+++ b/src/components/imgSlider/ImgSlider.module.scss
@@ -23,4 +23,16 @@
     left: 0;
     cursor: pointer;
   }
+
+  @include mobile {
+    .slider {
+      width: 80%;
+      height: 300px;
+
+      img {
+        width: 400px;
+        height: 300px;
+      }
+    }
+  }
 }
