--- a/src/components/listView/ListView.module.scss
+++ b/src/components/listView/ListView.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/color.scss";
+@import "../../styles/common.scss";
 
 .listView {
   position: fixed;
@@ -14,6 +15,12 @@
   padding-bottom: 40px;
   overflow-y: auto;
   font-family: "TheJamsil5Bold";
+
+  .closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
   .img {
     width: 400px;
@@ -98,6 +105,31 @@
 
     100% {
       right: 0px;
+    }
+  }
+
+  @include mobile {
+    width: 100%;
+    padding: 0;
+    animation: none;
+
+    .title {
+      padding-top: 10px;
+    }
+
+    .img {
+      width: 100%;
+    }
+
+    .recipe {
+      width: 95%;
+    }
+
+    .url,
+    .recipe,
+    .content,
+    .materials {
+      padding-left: 10px;
     }
   }
 }
