close icon 추가, modal 배경 클릭시 modal 상태 취소되도록 수정

--- a/src/components/header/mobile/toggleHeader/ToggleHeader.module.scss
+++ b/src/components/header/mobile/toggleHeader/ToggleHeader.module.scss
@@ -17,8 +17,9 @@
 
   .close {
     background-color: whitesmoke;
-    width: 25px;
-    height: 25px;
+    width: 10px;
+    height: 10px;
+    padding: 5px;
     position: absolute;
     right: 0;
     border-left: 1px solid $borderColor;
