--- a/src/components/listView/ListView.module.scss
+++ b/src/components/listView/ListView.module.scss
@@ -20,6 +20,8 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    width: 12px;
+    height: 12px;
   }
 
   .img {
@@ -55,7 +57,7 @@
       grid-template-columns: repeat(2, 1fr);
 
       .item {
-        width: 100px;
+        width: 130px;
         margin-right: 20px;
         margin-bottom: 10px;
       }
