--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -10,6 +10,15 @@ $wide-screen: "(min-width: 1000px)";
   left: 0;
   background-color: rgba(0, 0, 0, 0.4);
   @include flexSort;
+
+  .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+  }
 }
 
 @mixin container {
