--- a/src/components/header/mobile/MobileHeader.module.scss
+++ b/src/components/header/mobile/MobileHeader.module.scss
@@ -3,9 +3,21 @@
 .mobileHeader {
   width: 100%;
   height: 40px;
+  display: flex;
+  align-items: center;
   box-shadow: $boxBlackShadow;
   background-color: white;
   position: relative;
+
+  .reload {
+    width: 18px;
+    height: 18px;
+    padding: 3px;
+    border: 1px solid $borderColor;
+    position: absolute;
+    left: 10px;
+    border-radius: 4px;
+  }
 
   .toggle {
     height: 20px;
