검색시 태그로 검색하도록 로직 수정

--- a/src/components/listView/ListView.module.scss
+++ b/src/components/listView/ListView.module.scss
@@ -38,6 +38,7 @@
   }
 
   .content {
+    width: 400px;
     margin-top: 10px;
     color: red;
     text-decoration: underline;
@@ -123,7 +124,8 @@
       width: 100%;
     }
 
-    .recipe {
+    .recipe,
+    .content {
       width: 95%;
     }
 
