--- a/src/components/add/AddRecipe.module.scss
+++ b/src/components/add/AddRecipe.module.scss
@@ -11,7 +11,17 @@
   left: 0;
   @include flexSort;
 
+  .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+  }
+
   .container {
+    z-index: 1;
     width: 400px;
     max-height: 70vh;
     overflow-y: auto;
