--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,14 @@
 @tailwind utilities;
 @import "./styles/color.scss";
 
+.header-button {
+  @apply cursor-pointer hover:text-blue-500 scale-110;
+}
+
+.header-toggle-list {
+  @apply bg-slate-200 flex items-center justify-center py-5 border border-solid border-b-slate-300;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
