--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,22 @@
   @apply bg-slate-200 flex items-center justify-center py-5 border border-solid border-b-slate-300;
 }
 
+.modal {
+  @apply w-screen h-screen fixed top-0 left-0 bg-black4 flex items-center justify-center;
+}
+
+.modal-container {
+  @apply w-96 h-3/5 text-center bg-white relative;
+}
+
+.modal-header {
+  @apply text-xl font-bold mt-5 mb-7;
+}
+
+.modal-back {
+  @apply w-full h-full absolute top-0 left-0 cursor-pointer;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
