--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@
 }
 
 .recipe-input {
-  @apply border border-solid border-gray-400 outline-none h-7 w-1/2 mr-2;
+  @apply border border-solid border-gray-400 outline-none h-9 mr-2 rounded;
 }
 
 body {
